force-app/main/default/objects/Account/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case à cocher si c&apos;est un actiif = Client a un contrat en cours</description>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>