force-app/main/default/objects/Account/fields/Anciennete__c.field-meta.xml
<CustomField>
    <fullName>Anciennete__c</fullName>
    <description>Ancienneté = date du 1er contrat</description>
    <inlineHelpText>Correspond à la date du 1er contrat</inlineHelpText>
    <label>Ancienneté</label>
    <type>Date</type>
</CustomField>