force-app/main/default/objects/Account/fields/Anciennete_l_emploi__c.field-meta.xml
<CustomField>
    <fullName>Anciennete_l_emploi__c</fullName>
    <description>Ancienneté dans l&apos;emploi actuel</description>
    <label>Ancienneté à l&apos;emploi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- 1 an</fullName>
            </value>
            <value>
                <fullName>1 à 5 ans</fullName>
            </value>
            <value>
                <fullName>+ 5 ans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>