force-app/main/default/objects/Account/fields/Autres_charges__c.field-meta.xml
<CustomField>
    <fullName>Autres_charges__c</fullName>
    <description>informations complémentaire s&apos;il y a d&apos;autre charge</description>
    <label>Autres charges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>