force-app/main/default/objects/Account/fields/Autres_revenus__c.field-meta.xml
<CustomField>
    <fullName>Autres_revenus__c</fullName>
    <description>Salaires / Chômage / Pensions / Retraites / Revenus de capitaux mobilier / Revenus immobiliers / les professions libérales = revenus non commerciaux / artisans = les revenus industriels et commerciaux / les agriculteurs = les revenus agricoles</description>
    <inlineHelpText>Liste des autres sources de revenu</inlineHelpText>
    <label>Autres revenus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>