force-app/main/default/objects/Account/fields/BERs__c.field-meta.xml
<CustomField>
    <fullName>BERs__c</fullName>
    <label>BERs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>