force-app/main/default/objects/Account/fields/Budget_mensuel__c.field-meta.xml
<CustomField>
    <fullName>Budget_mensuel__c</fullName>
    <description>Budget définis sur la fourchette données</description>
    <label>Budget mensuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moins de 300</fullName>
            </value>
            <value>
                <fullName>300 à 600</fullName>
            </value>
            <value>
                <fullName>plus de 600</fullName>
            </value>
            <value>
                <fullName>NSP (ne se prononce pas)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>