force-app/main/default/objects/Account/fields/Bureau_distributeur__c.field-meta.xml
<CustomField>
    <fullName>Bureau_distributeur__c</fullName>
    <description>Ville du distributeur - voir Bible réseau -</description>
    <label>Bureau distributeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>