force-app/main/default/objects/Account/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <description>Montant des charges mensuelle</description>
    <label>Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>