force-app/main/default/objects/Account/fields/Clausier__c.field-meta.xml
<CustomField>
    <fullName>Clausier__c</fullName>
    <description>Champs commentaire pour préciser des spécificités liés au contrat à établir</description>
    <label>Clausier</label>
    <type>TextArea</type>
</CustomField>