force-app/main/default/objects/Account/fields/Client_grand_compte__c.field-meta.xml
<CustomField>
    <fullName>Client_grand_compte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case à cocher uniquement si c&apos;est un Client grand compte</description>
    <label>Client grand compte</label>
    <type>Checkbox</type>
</CustomField>