force-app/main/default/objects/Account/fields/Co_emprunteur__c.field-meta.xml
<CustomField>
    <fullName>Co_emprunteur__c</fullName>
    <description>Prénom &amp; Nom du co-emprêteur</description>
    <inlineHelpText>Prénom+Nom</inlineHelpText>
    <label>Co-emprunteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>