force-app/main/default/objects/Account/fields/Code_APE__c.field-meta.xml
<CustomField>
    <fullName>Code_APE__c</fullName>
    <description>code de cinq caractères (quatre chiffres et une lettre)</description>
    <label>Code APE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>