force-app/main/default/objects/Account/fields/Code_postal_de_naissance__c.field-meta.xml
<CustomField>
    <fullName>Code_postal_de_naissance__c</fullName>
    <label>Code postal de naissance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>