force-app/main/default/objects/Account/fields/Competiteurs__c.field-meta.xml
<CustomField>
    <fullName>Competiteurs__c</fullName>
    <description>Liste des compétiteurs qui financent les voitures déjà dans le parc</description>
    <label>Compétiteurs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>