force-app/main/default/objects/Account/fields/Cotation_Banque_de_France__c.field-meta.xml
<CustomField>
    <fullName>Cotation_Banque_de_France__c</fullName>
    <description>Données de cotation communiqué par la banque de France</description>
    <label>Cotation Banque de France</label>
    <length>5</length>
    <type>Text</type>
</CustomField>