force-app/main/default/objects/Account/fields/Creation_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Creation_de_l_entreprise__c</fullName>
    <description>Date de création de l&apos;entreprise</description>
    <label>Création de l&apos;entreprise</label>
    <type>Date</type>
</CustomField>