force-app/main/default/objects/Account/fields/Date_d_ouverture_de_l_encours__c.field-meta.xml
<CustomField>
    <fullName>Date_d_ouverture_de_l_encours__c</fullName>
    <description>Date d&apos;ouverture de l&apos;encours =Date d&apos;ouverture de la limite accordée</description>
    <label>Date d&apos;ouverture de l&apos;encours</label>
    <type>Date</type>
</CustomField>