force-app/main/default/objects/Account/fields/Date_de_fin_de_l_encours__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_l_encours__c</fullName>
    <description>Date de fin  de la limite accordée</description>
    <label>Date de fin de l&apos;encours</label>
    <type>Date</type>
</CustomField>