force-app/main/default/objects/Account/fields/Date_de_mise_jour_du_K_bis__c.field-meta.xml
<CustomField>
    <fullName>Date_de_mise_jour_du_K_bis__c</fullName>
    <description>Date mentionné sur courrier KBIS</description>
    <label>Date de mise à jour du K-bis</label>
    <type>Date</type>
</CustomField>