force-app/main/default/objects/Account/fields/Denomination_sociale__c.field-meta.xml
<CustomField>
    <fullName>Denomination_sociale__c</fullName>
    <description>La dénomination sociale  de l&apos;entité</description>
    <label>Dénomination sociale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>