force-app/main/default/objects/Account/fields/Domaine_d_activite__c.field-meta.xml
<CustomField>
    <fullName>Domaine_d_activite__c</fullName>
    <description>secteur d&apos;activité</description>
    <label>Domaine d&apos;activité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Définir?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>