force-app/main/default/objects/Account/fields/DU_BusinessPartnerID__c.field-meta.xml
<CustomField>
    <fullName>DU_BusinessPartnerID__c</fullName>
    <description>CDM: Identifier for Data Uploads of Contacts</description>
    <externalId>true</externalId>
    <label>Business Partner ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>