force-app/main/default/objects/Account/fields/DU_ContractContact__c.field-meta.xml
<CustomField>
    <fullName>DU_ContractContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Single Point of Contact between account and VWFS for all service related questions.</description>
    <label>Contract Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DU_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>