force-app/main/default/objects/Account/fields/DU_ContractSystemID__c.field-meta.xml
<CustomField>
    <fullName>DU_ContractSystemID__c</fullName>
    <description>Identifies the systems in which a customer&apos;s contracts can be found.</description>
    <externalId>true</externalId>
    <label>Contract System ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>