force-app/main/default/objects/Account/fields/DU_CustomerClassification__c.field-meta.xml
<CustomField>
    <fullName>DU_CustomerClassification__c</fullName>
    <description>CDM: Allows the classification of the customer into Private Customer, Micro Business, Fleet Customer and Dealer</description>
    <label>Customer Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Customer</fullName>
            </value>
            <value>
                <fullName>Micro Business</fullName>
            </value>
            <value>
                <fullName>Fleet Customer</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>