force-app/main/default/objects/Account/fields/DU_DateDeath__c.field-meta.xml
<CustomField>
    <fullName>DU_DateDeath__c</fullName>
    <description>CDM: Stores the date of death of the customer to prevent that she/he gets marketing material</description>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>