force-app/main/default/objects/Account/fields/DU_DealerBrand__c.field-meta.xml
<CustomField>
    <fullName>DU_DealerBrand__c</fullName>
    <description>CDM: Field contains the marketing brands the Dealer uses to address the customer. This does not include the distribution rights for the respective brand.
Availability 2.1.0.29</description>
    <inlineHelpText>Choose the brands the Dealer uses to address customer.</inlineHelpText>
    <label>Dealer Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SKODA</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>SEAT</fullName>
            </value>
            <value>
                <fullName>VW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>