force-app/main/default/objects/Account/fields/DU_DealerCompanyNumber__c.field-meta.xml
<CustomField>
    <fullName>DU_DealerCompanyNumber__c</fullName>
    <description>CDM: Shows the company number of a dealer account.</description>
    <externalId>true</externalId>
    <label>Dealer Company Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>