force-app/main/default/objects/Account/fields/DU_DPStatus__c.field-meta.xml
<CustomField>
    <fullName>DU_DPStatus__c</fullName>
    <label>DP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_DPStatus</valueSetName>
    </valueSet>
</CustomField>