force-app/main/default/objects/Account/fields/DU_GroupID__c.field-meta.xml
<CustomField>
    <fullName>DU_GroupID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>CDM: Group ID like FS.ID, VW.ID etc.</description>
    <externalId>true</externalId>
    <inlineHelpText>Group ID like FS.ID (guid)</inlineHelpText>
    <label>Group ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>