force-app/main/default/objects/Account/fields/DU_Inactive__c.field-meta.xml
<CustomField>
    <fullName>DU_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Stores information on whether or not an account (currently only Dealer) is still active or already set to inactive.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>