force-app/main/default/objects/Account/fields/DU_IsCustomer__c.field-meta.xml
<CustomField>
    <fullName>DU_IsCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: States if the the account record is a customer of VWFS, requires a Business Parterner ID</description>
    <inlineHelpText>Determines whether the account record is a prospect or a customer.</inlineHelpText>
    <label>Is Customer</label>
    <type>Checkbox</type>
</CustomField>