force-app/main/default/objects/Account/fields/DU_IsDealerHierarchyNode__c.field-meta.xml
<CustomField>
    <fullName>DU_IsDealerHierarchyNode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: States if the account record is a node within the dealer hierarchy of VWFS</description>
    <label>Is Dealer Hierarchy Node</label>
    <type>Checkbox</type>
</CustomField>