force-app/main/default/objects/Account/fields/DU_LastInteraction__c.field-meta.xml
<CustomField>
    <fullName>DU_LastInteraction__c</fullName>
    <description>CDM: Last interaction date with the account.</description>
    <label>Last Interaction</label>
    <type>Date</type>
</CustomField>