force-app/main/default/objects/Account/fields/DU_LastModificationOnRelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>DU_LastModificationOnRelatedOpportunity__c</fullName>
    <description>CDM: Field to track when was an opportunity related to this account last updated.</description>
    <label>Last Modification on Related Opportunity</label>
    <summarizedField>Opportunity.LastModifiedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>