force-app/main/default/objects/Account/fields/DU_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>DU_LegalEntity__c</fullName>
    <description>CDM: Contains Legal Entity values (multiple values are possible) with LEMI code</description>
    <label>Legal Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_LegalEntity</valueSetName>
    </valueSet>
</CustomField>