force-app/main/default/objects/Account/fields/DU_LegalEntitySharing__c.field-meta.xml
<CustomField>
    <fullName>DU_LegalEntitySharing__c</fullName>
    <description>This will be a backend field which will be programmatically populated. This will be used in writing the sharing settings.</description>
    <label>Legal Entity Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>