force-app/main/default/objects/Account/fields/DU_MasterDataVerified__c.field-meta.xml
<CustomField>
    <fullName>DU_MasterDataVerified__c</fullName>
    <description>CDM: Indicates if the customer master data is verified by BFF/Journey (via an external provider)</description>
    <inlineHelpText>Indication of verified/unverified Master Data</inlineHelpText>
    <label>Master Data Verified</label>
    <type>Date</type>
</CustomField>