force-app/main/default/objects/Account/fields/DU_PreferredPartner__c.field-meta.xml
<CustomField>
    <fullName>DU_PreferredPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the preferred partner record (account type dealer) to the customer account record</description>
    <label>Preferred Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>VWFS CRM Dealer Account</value>
        </filterItems>
        <filterItems>
            <field>Account.DU_IsDealerHierarchyNode__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Preferred Partner)</relationshipLabel>
    <relationshipName>DU_AccountsFromPreferredPartner</relationshipName>
    <type>Lookup</type>
</CustomField>