force-app/main/default/objects/Account/fields/DU_PreviousOwner__c.field-meta.xml
<CustomField>
    <fullName>DU_PreviousOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM:</description>
    <label>Previous Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DU_AccountsPreviousOwner</relationshipName>
    <type>Lookup</type>
</CustomField>