force-app/main/default/objects/Account/fields/DU_RemunerationDealerGroup__c.field-meta.xml
<CustomField>
    <fullName>DU_RemunerationDealerGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Effort based dealer remuneration - contains the Dealer Group relevant from controlling perspective that will be used in remuneration rules that concern Dealer group of a Dealer (instead of using Account hierarchy which can contain multiple levels of dealer groups)</description>
    <label>Remuneration Dealer Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>VWFS CRM Dealer Account</value>
        </filterItems>
        <filterItems>
            <field>Account.DU_IsDealerHierarchyNode__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Remuneration Dealer Group)</relationshipLabel>
    <relationshipName>DU_AccountsFromRemunerationDealerGroup</relationshipName>
    <type>Lookup</type>
</CustomField>