force-app/main/default/objects/Account/fields/DU_SourceSystemCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>DU_SourceSystemCreatedDate__c</fullName>
    <description>CDM: originalDate</description>
    <label>Source System Created Date</label>
    <type>Date</type>
</CustomField>