force-app/main/default/objects/Account/fields/DU_TempBrand__c.field-meta.xml
<CustomField>
    <fullName>DU_TempBrand__c</fullName>
    <label>Temp Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>SEAT</fullName>
            </value>
            <value>
                <fullName>SKODA</fullName>
            </value>
            <value>
                <fullName>VW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>