force-app/main/default/objects/Account/fields/DU_TempCampaignID__c.field-meta.xml
<CustomField>
    <fullName>DU_TempCampaignID__c</fullName>
    <description>Campaign Id to Identify Contacts for Campaign.</description>
    <label>Temp Campaign ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>