force-app/main/default/objects/Account/fields/DU_TempContractName__c.field-meta.xml
<CustomField>
    <fullName>DU_TempContractName__c</fullName>
    <description>Name of contract</description>
    <label>Temp Contract Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>