force-app/main/default/objects/Account/fields/DU_TempContractNumber__c.field-meta.xml
<CustomField>
    <fullName>DU_TempContractNumber__c</fullName>
    <label>Temp Contract Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>