force-app/main/default/objects/Account/fields/DU_TempLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>DU_TempLegalEntity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volkswagen Bank</fullName>
            </value>
            <value>
                <fullName>Audi Bank</fullName>
            </value>
            <value>
                <fullName>SKODA Bank</fullName>
            </value>
            <value>
                <fullName>SEAT Bank</fullName>
            </value>
            <value>
                <fullName>VW Bank</fullName>
                <isActive>false</isActive>
                <label>VW Bank</label>
            </value>
            <value>
                <fullName>VW Insurance</fullName>
                <isActive>false</isActive>
                <label>VW Insurance</label>
            </value>
            <value>
                <fullName>VW Leasing</fullName>
                <isActive>false</isActive>
                <label>VW Leasing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>