force-app/main/default/objects/Account/fields/DU_VATNumber__c.field-meta.xml
<CustomField>
    <fullName>DU_VATNumber__c</fullName>
    <description>CDM: Stores the VAT Number related to the market the company is listened.
Availability 2.1.0.29</description>
    <inlineHelpText>Please enter the VAT Number of the the related Account.</inlineHelpText>
    <label>VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>