force-app/main/default/objects/Account/fields/Employeur__c.field-meta.xml
<CustomField>
    <fullName>Employeur__c</fullName>
    <description>Nom de l&apos;employeur</description>
    <label>Employeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>