force-app/main/default/objects/Account/fields/Encours_utilise_groupe__c.field-meta.xml
<CustomField>
    <fullName>Encours_utilise_groupe__c</fullName>
    <description>Encours utilisé groupe</description>
    <label>Encours utilisé groupe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>