force-app/main/default/objects/Account/fields/Grand_compte_international__c.field-meta.xml
<CustomField>
    <fullName>Grand_compte_international__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case à cocher uniquement si c&apos;est un Client grand compte  International</description>
    <label>Grand compte international</label>
    <type>Checkbox</type>
</CustomField>