force-app/main/default/objects/Account/fields/Insatisfaction_client__c.field-meta.xml
<CustomField>
    <fullName>Insatisfaction_client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marqueur d&apos;identification ou modifier par Satisfaction client</description>
    <label>Insatisfaction client</label>
    <type>Checkbox</type>
</CustomField>