force-app/main/default/objects/Account/fields/Interne__c.field-meta.xml
<CustomField>
    <fullName>Interne__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case qui doit être cochée si un contrat lié au compte possède un numéro de BER correspondant à de l&apos;interne</description>
    <label>Interne (VDL)</label>
    <type>Checkbox</type>
</CustomField>