force-app/main/default/objects/Account/fields/Jalon_de_l_acteur__c.field-meta.xml
<CustomField>
    <fullName>Jalon_de_l_acteur__c</fullName>
    <description>Jalon sur KSIOP</description>
    <label>Jalon de l&apos;acteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Décédé</fullName>
            </value>
            <value>
                <fullName>Actif</fullName>
            </value>
            <value>
                <fullName>Inactif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>