force-app/main/default/objects/Account/fields/Libelle_de_l_APE__c.field-meta.xml
<CustomField>
    <fullName>Libelle_de_l_APE__c</fullName>
    <description>Cette variable correspond au libellé du code d&apos;activité de l&apos;établissement</description>
    <label>Libellé de l&apos;APE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>