force-app/main/default/objects/Account/fields/Liens_entre_co_emprunteurs__c.field-meta.xml
<CustomField>
    <fullName>Liens_entre_co_emprunteurs__c</fullName>
    <label>Liens entre co-emprunteurs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ami</fullName>
            </value>
            <value>
                <fullName>Autre relation</fullName>
            </value>
            <value>
                <fullName>Bénéficiaire effectif</fullName>
            </value>
            <value>
                <fullName>Concubin(e)</fullName>
            </value>
            <value>
                <fullName>Ayant-droit</fullName>
            </value>
            <value>
                <fullName>Fille</fullName>
            </value>
            <value>
                <fullName>Fils</fullName>
            </value>
            <value>
                <fullName>Frère</fullName>
            </value>
            <value>
                <fullName>Marié(e)</fullName>
            </value>
            <value>
                <fullName>Mère</fullName>
            </value>
            <value>
                <fullName>Pacsé(e)</fullName>
            </value>
            <value>
                <fullName>Père</fullName>
            </value>
            <value>
                <fullName>Sœur</fullName>
            </value>
            <value>
                <fullName>Sans relation</fullName>
            </value>
            <value>
                <fullName>Tiers payeur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>