force-app/main/default/objects/Account/fields/Limite_accorde_groupe__c.field-meta.xml
<CustomField>
    <fullName>Limite_accorde_groupe__c</fullName>
    <description>Limite accordée groupe</description>
    <label>Limite accordé groupe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>