force-app/main/default/objects/Account/fields/Marche_public__c.field-meta.xml
<CustomField>
    <fullName>Marche_public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case à cocher uniquement si c&apos;est un marché public</description>
    <label>Marché public</label>
    <type>Checkbox</type>
</CustomField>