force-app/main/default/objects/Account/fields/Marques__c.field-meta.xml
<CustomField>
    <fullName>Marques__c</fullName>
    <description>Liste des différentes marques présents dans le parc</description>
    <label>Marques</label>
    <length>255</length>
    <type>Text</type>
</CustomField>