force-app/main/default/objects/Account/fields/Montant_d_encours_actualise__c.field-meta.xml
<CustomField>
    <fullName>Montant_d_encours_actualise__c</fullName>
    <description>Montant Encours  utilisé par l’entité citée</description>
    <inlineHelpText>Encours  utilisé par l’entité citée</inlineHelpText>
    <label>Montant d&apos;encours actualisé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>