force-app/main/default/objects/Account/fields/Montant_d_encours_ouvert__c.field-meta.xml
<CustomField>
    <fullName>Montant_d_encours_ouvert__c</fullName>
    <description>Limite autorisée d’encours accordé à l’entité citée</description>
    <label>Montant d&apos;encours ouvert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>