force-app/main/default/objects/Account/fields/Nationalite__c.field-meta.xml
<CustomField>
    <fullName>Nationalite__c</fullName>
    <label>Nationalité</label>
    <length>50</length>
    <type>Text</type>
</CustomField>