force-app/main/default/objects/Account/fields/Nb_de_contrats_terme_dans_les_3_mois__c.field-meta.xml
<CustomField>
    <fullName>Nb_de_contrats_terme_dans_les_3_mois__c</fullName>
    <label>Nb de contrats à terme dans les 3 mois</label>
    <summaryFilterItems>
        <field>Contract__c.RollUpAccountFieldsValue__c</field>
        <operation>equals</operation>
        <value>3</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract__c.Compte_client_associe__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>