force-app/main/default/objects/Account/fields/Nom_du_dirigeant__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_dirigeant__c</fullName>
    <description>Dirigeant de l&apos;entreprise</description>
    <label>Nom du dirigeant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>