force-app/main/default/objects/Account/fields/Nom_du_greffe_du_tribunal__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_greffe_du_tribunal__c</fullName>
    <description>Nom du tribunal - information sur document KBIS</description>
    <label>Nom du greffe du tribunal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>