force-app/main/default/objects/Account/fields/Nom_du_groupe__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_groupe__c</fullName>
    <label>Nom du groupe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>