force-app/main/default/objects/Account/fields/NPAI__c.field-meta.xml
<CustomField>
    <fullName>NPAI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>N&apos;habite pas à l&apos;adresse indique - à cocher si c&apos;est le cas</description>
    <inlineHelpText>N&apos;habite pas à l&apos;adresse indique</inlineHelpText>
    <label>NPAI</label>
    <type>Checkbox</type>
</CustomField>