force-app/main/default/objects/Account/fields/Numero_client__c.field-meta.xml
<CustomField>
    <fullName>Numero_client__c</fullName>
    <description>Numéro de client VWF = Numéro d&apos;acteur</description>
    <label>Numéro client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>