force-app/main/default/objects/Account/fields/Numero_d_etablissement__c.field-meta.xml
<CustomField>
    <fullName>Numero_d_etablissement__c</fullName>
    <description>Numero VWFS sur Bible réseau</description>
    <label>Numéro d&apos;établissement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>