force-app/main/default/objects/Account/fields/Numero_de_groupe__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_groupe__c</fullName>
    <description>Numero interne VWFS</description>
    <label>Numéro de groupe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>