force-app/main/default/objects/Account/fields/Numero_de_TVA_intracommunautaire__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_TVA_intracommunautaire__c</fullName>
    <description>Numéro de TVA Intra communautaire</description>
    <label>Numéro de TVA intracommunautaire</label>
    <length>15</length>
    <type>Text</type>
</CustomField>